--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
     "i": "^0.3.7",
     "jade": "^0.29.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.8.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
@@ -28,6 +30,7 @@
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.15.2",
     "razorpay": "^2.9.5",
     "sweetalert2": "^11.6.13",
     "uuid": "^11.0.3"
