--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http-errors": "~1.6.3",
     "i": "^0.3.7",
     "jade": "^0.29.0",
+    "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "mongoose": "^8.8.0",
     "morgan": "~1.9.1",
